# kops

channels/: stable
cmd/kops/: create_cluster.go
hack/: .packages
nodeup/pkg/bootstrap/: install.go
nodeup/pkg/model/: protokube.go
pkg/apis/kops/validation/: legacy.go
pkg/assets/: builder.go
pkg/model/: bootstrapscript.go
pkg/model/alimodel/: BUILD.bazel  autoscalinggroup.go  context.go  network.go
pkg/model/components/: apiserver.go  kubecontrollermanager.go  kubelet.go
pkg/resources/ali/: ali.go
pkg/resources/ops/: BUILD.bazel  collector.go
protokube/cmd/protokube/: main.go
protokube/pkg/gossip/ali/: BUILD.bazel
protokube/pkg/protokube/: BUILD.bazel
upup/pkg/fi/cloudup/: apply_cluster.go  populate_instancegroup_spec.go  tagbuilder.go
upup/pkg/fi/cloudup/alitasks/: BUILD.bazel  autoscalinggroup_fitask.go  eip_natgateway_association.go  natgateway.go  natgateway_fitask.go  vswitchSNAT.go
upup/pkg/fi/cloudup/aliup/: ali_cloud.go  status.go
