load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["seeds.go"],
    importpath = "k8s.io/kops/protokube/pkg/gossip/ali",
    visibility = ["//visibility:public"],
    deps = [
        "//protokube/pkg/gossip:go_default_library",
        "//vendor/github.com/denverdino/aliyungo/common:go_default_library",
        "//vendor/github.com/denverdino/aliyungo/ecs:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["seeds_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//upup/pkg/fi/cloudup/aliup:go_default_library",
        "//vendor/github.com/denverdino/aliyungo/ecs:go_default_library",
    ],
)
